calcにminusメソッドを追加してみた
